--- a/Labs/3.Intents/SourceFiles/Skeletons/IntentsLab/res/values/strings.xml
+++ b/Labs/3.Intents/SourceFiles/Skeletons/IntentsLab/res/values/strings.xml
@@ -21,5 +21,6 @@
     <string name="no_text_entered">No Text Entered</string>
     <string name="enter_string">Enter</string>
     <string name="enter_text_here_string">Enter Text Here</string>
+    <string name="chooserText">Choose a browser</string>
 
 </resources>
